--- a/nginx/tts-medical.conf
+++ b/nginx/tts-medical.conf
@@ -1,9 +1,4 @@
-# nginx/tts-medical.conf
-# Configuration flexible qui fonctionne avec ou sans SSL
-
-# Rate limiting zone (doit être défini au niveau global)
-limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-
+# Configuration NGINX simple pour TTS Medical API
 server {
     listen 80;
     server_name collection.urmaphalab.com;
@@ -14,22 +9,18 @@ server {
         allow all;
     }
     
-    # Redirection vers HTTPS seulement si le certificat existe
+    # Proxy vers l'application Node.js
     location / {
-        # Cette directive sera automatiquement ajoutée par Certbot si SSL est configuré
-        # return 301 https://$server_name$request_uri;
-        
-        # Configuration HTTP temporaire (sera remplacée par la redirection HTTPS)
-        limit_req zone=api_limit burst=20 nodelay;
-        
+        # CORS pour les requêtes OPTIONS
         if ($request_method = OPTIONS) {
             add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
             add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
-            add_header Access-Control-Max-Age 86400 always;
+            add_header Access-Control-Max-Age 3600 always;
             return 204;
         }
         
+        # Configuration du proxy
         proxy_pass http://localhost:5100;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -40,136 +31,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
-    }
-}
-
-# Configuration HTTPS (sera activée après génération du certificat SSL)
-server {
-    listen 443 ssl http2;
-    server_name collection.urmaphalab.com;
-    
-    # Logs
-    access_log /var/log/nginx/tts-medical-api.access.log;
-    error_log /var/log/nginx/tts-medical-api.error.log;
-    
-    # SSL Configuration - sera automatiquement configuré par Certbot
-    ssl_certificate /etc/letsencrypt/live/collection.urmaphalab.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/collection.urmaphalab.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-    
-    # Gzip Compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/xml+rss
-        application/json;
-    
-    # Client body size limit
-    client_max_body_size 10M;
-    
-    # Timeout settings
-    proxy_connect_timeout 60s;
-    proxy_send_timeout 60s;
-    proxy_read_timeout 60s;
-    
-    # Handle preflight requests globalement
-    location / {
-        # Rate limiting
-        limit_req zone=api_limit burst=20 nodelay;
-        
-        # CORS headers pour les requêtes OPTIONS
-        if ($request_method = OPTIONS) {
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
-            add_header Access-Control-Max-Age 86400 always;
-            return 204;
-        }
-        
-        # Proxy vers votre application Node.js
-        proxy_pass http://localhost:5100;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
-        # CORS headers pour les autres requêtes
+        # Headers CORS pour toutes les requêtes
         add_header Access-Control-Allow-Origin "*" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
     }
     
-    # Routes API spécifiques
-    location /api/ {
-        limit_req zone=api_limit burst=30 nodelay;
-        
-        if ($request_method = OPTIONS) {
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
-            add_header Access-Control-Max-Age 86400 always;
-            return 204;
-        }
-        
-        proxy_pass http://localhost:5100;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
-    }
-    
-    # Health check endpoint
+    # Health check
     location = /health {
         proxy_pass http://localhost:5100/health;
         access_log off;
-    }
-    
-    # Robots.txt
-    location = /robots.txt {
-        add_header Content-Type text/plain;
-        return 200 "User-agent: *\nDisallow: /\n";
-    }
-    
-    # Deny access to sensitive files
-    location ~ /\. {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-    
-    location ~ ~$ {
-        deny all;
-        access_log off;
-        log_not_found off;
     }
 }
