--- a/nginx/tts-medical.conf
+++ b/nginx/tts-medical.conf
@@ -11,15 +11,6 @@ server {
     
     # Proxy vers l'application Node.js
     location / {
-        # CORS pour les requêtes OPTIONS
-        if ($request_method = OPTIONS) {
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
-            add_header Access-Control-Max-Age 3600 always;
-            return 204;
-        }
-        
         # Configuration du proxy
         proxy_pass http://localhost:5100;
         proxy_http_version 1.1;
@@ -31,10 +22,13 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
-        # Headers CORS pour toutes les requêtes
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
+        # Timeouts pour les gros fichiers
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # Taille max des fichiers uploadés
+        client_max_body_size 10M;
     }
     
     # Health check
