--- a/nginx/tts-medical.conf
+++ b/nginx/tts-medical.conf
@@ -1,17 +1,55 @@
-# Configuration NGINX simple pour TTS Medical API
+# nginx/tts-medical.conf
+# Configuration NGINX finale avec SSL pour TTS Medical API
+
+# Configuration HTTP - Redirection vers HTTPS
 server {
     listen 80;
     server_name collection.urmaphalab.com;
     
-    # Location pour les challenges Let's Encrypt
+    # Permettre les renouvellements Certbot
     location /.well-known/acme-challenge/ {
         root /var/www/html;
-        allow all;
+        try_files $uri =404;
     }
     
-    # Proxy vers l'application Node.js
+    # Rediriger tout le reste vers HTTPS
     location / {
-        # Configuration du proxy
+        return 301 https://$server_name$request_uri;
+    }
+}
+
+# Configuration HTTPS principale
+server {
+    listen 443 ssl http2;
+    server_name collection.urmaphalab.com;
+    
+    # Certificats SSL Let's Encrypt
+    ssl_certificate /etc/letsencrypt/live/collection.urmaphalab.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/collection.urmaphalab.com/privkey.pem;
+    
+    # Configuration SSL moderne et sécurisée
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_session_tickets off;
+    
+    # Configuration OCSP Stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    
+    # Headers de sécurité
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    add_header X-Frame-Options DENY always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';" always;
+    
+    # Configuration du proxy vers l'API TTS Medical
+    location / {
+        # Proxy vers l'application
         proxy_pass http://localhost:5100;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -20,20 +58,103 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
         proxy_cache_bypass $http_upgrade;
         
-        # Timeouts pour les gros fichiers
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        # Timeouts
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
+        proxy_send_timeout 300s;
         
-        # Taille max des fichiers uploadés
-        client_max_body_size 10M;
+        # Buffer settings
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        proxy_busy_buffers_size 8k;
+        
+        # Gestion CORS pour l'API
+        add_header Access-Control-Allow-Origin "*" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH" always;
+        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization, Cache-Control, Pragma" always;
+        add_header Access-Control-Expose-Headers "Content-Range, X-Content-Range" always;
+        add_header Access-Control-Allow-Credentials true always;
+        
+        # Gestion des requêtes OPTIONS (preflight CORS)
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH" always;
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization, Cache-Control, Pragma" always;
+            add_header Access-Control-Max-Age 86400;
+            add_header Content-Type 'text/plain; charset=utf-8';
+            add_header Content-Length 0;
+            return 204;
+        }
     }
     
-    # Health check
-    location = /health {
+    # Route spécifique pour les health checks
+    location /health {
         proxy_pass http://localhost:5100/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         access_log off;
     }
+    
+    # Optimisation pour les fichiers statiques (si nécessaire)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header Vary Accept-Encoding;
+        access_log off;
+        
+        # Fallback vers l'API si le fichier n'existe pas
+        try_files $uri @api;
+    }
+    
+    # Fallback pour les fichiers statiques
+    location @api {
+        proxy_pass http://localhost:5100;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # Gestion des erreurs personnalisées
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /404.html {
+        internal;
+        return 404 '{"error": "Not Found", "message": "The requested resource was not found"}';
+        add_header Content-Type application/json always;
+    }
+    
+    location = /50x.html {
+        internal;
+        return 500 '{"error": "Internal Server Error", "message": "Something went wrong on our end"}';
+        add_header Content-Type application/json always;
+    }
+    
+    # Sécurité - Bloquer l'accès aux fichiers sensibles
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+    
+    location ~ \.(log|conf)$ {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+    
+    # Logs détaillés
+    access_log /var/log/nginx/tts-medical-access.log combined;
+    error_log /var/log/nginx/tts-medical-error.log warn;
+    
+    # Limitation du taux de requêtes (protection DDoS basique)
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req zone=api burst=20 nodelay;
 }
